Laboratory_Task_4_David.html

--- a/Laboratory_Task_4-David/Laboratory_Task_4_David.html
+++ b/Laboratory_Task_4-David/Laboratory_Task_4_David.html
@@ -2,7 +2,7 @@
 <html>
     <div class = "head">
         <head>
-            <link rel="stylesheet" href="C:\Users\LENOVO\OneDrive\Desktop\lab4Style.css">
+            <link rel="stylesheet" href="C:\Users\LENOVO\OneDrive\Documents\GitHub\har_old.github.io\Laboratory_Task_4-David\lab4Style.css">
 
             <title>LabTask4</title>
             <header>A Complete CSS Website</header><br>
@@ -32,7 +32,7 @@
                     College of Engineering and Architecture
                 </h2>
                 <image src="C:\Users\LENOVO\Downloads\cea.jpg" width="300px" height="300px" class="img2"></image><!--Put Image Here-->
-                <p>Insert text here about CEA</p>
+                <p>Graduates of the College of Engineering and Architecture (CEA) are transformed into leaders who are inventive, globally competitive, socially responsible, and goal-oriented engineers and architects.</p>
             </div>
         </div>
 
