--- a/CPE143L_SA1_David/Student.html
+++ b/CPE143L_SA1_David/Student.html
@@ -97,7 +97,7 @@
                         <div class="roomInfo">
                             <h3>Double Room</h3>
                             <h6 class="priceOpacity">From P2500</h6>
-                            <p>Single bed</p>
+                            <p>Queen-size bed</p>
                             <p class="icons1"><i class='bx bxs-bath' ></i> <i class='bx bxs-phone' ></i> <i class='bx bx-wifi' ></i> <i class='bx bx-tv' ></i></p>
                             <button type="button" class="bookBtn" value="2500" onclick="book(event)">Choose Room</button>
                         </div>
