--- a/CPE143L_SA1_David/Admin.html
+++ b/CPE143L_SA1_David/Admin.html
@@ -14,9 +14,8 @@
 
 <body>
     <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen"><i
-                class='bx bxs-hotel'></i>H'Otel</button>
-        <button class="tablinks" onclick="openTab(event, 'Home')">Home</button>
+        <button class="tablinks" onclick="openTab(event, 'Home')"><i class='bx bxs-hotel'></i>H'Otel</button>
+        <button class="tablinks" onclick="openTab(event, 'Home')" id="defaultOpen">Home</button>
         <button class="tablinks" onclick="openTab(event, 'Developer')">Developer</button>
         <button class="tablinks" onclick="NA()">Settings</button>
         <button class="logout" style="float: right;" onclick="logout()">Logout</button>
